@startuml

title __PLAYER's Class Diagram__\n

  namespace Player {
    class Player.Player {
        # animations : Animation[]
        # armed : boolean
        # attacking : boolean
        # gotHit : boolean
        # health : int
        # height : int
        # img : BufferedImage
        {static} # instance : Player
        # stamina : int
        # timerDamageCuie : int
        # timerDamageCuieConstanta : int
        # timerStaminaRegen : int
        # timerStaminaRegenConstanta : int
        # width : int
        + Player()
        + addStatsBar()
        + getBounds()
        + getHealth()
        + getInAnimation()
        {static} + getInstance()
        + getStamina()
        + getState()
        + isArmed()
        + isAttacking()
        {static} + load()
        + mapCollision()
        + render()
        + setAttacking()
        + setCurrentAnimation()
        + setGotHit()
        + setHealth()
        + setHeight()
        {static} + setInstance()
        + setStamina()
        + setWidth()
        + tick()
        - Player()
    }
  }
  

  namespace Player {
    class Player.PlayerArmed {
        + PlayerArmed()
        + mapCollision()
    }
  }
  

  namespace Player {
    class Player.animations_enum {
        {static} + attack1 : int
        {static} + attack2 : int
        {static} + dash : int
        {static} + death : int
        {static} + fall : int
        {static} + idle : int
        {static} + idle_crouch : int
        {static} + jump : int
        {static} + run : int
        {static} + walk : int
        {static} + walk_crouch : int
    }
  }
  

  Player.Player -up-|> GameObject.GameObject
  Player.Player o-- SpriteSheet.Animation : currentAnimation
  Player.Player o-- ChestiiRandom.MutableBoolean : inAnimation
  Player.Player o-- Player.States.PlayerState : state
  Player.Player o-- GUI.Elements.StatsBar : statsBar
  Player.PlayerArmed -up-|> Player.Player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
